--- a/src/app/views/components/templates/header/header.component.html
+++ b/src/app/views/components/templates/header/header.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar class="mat-elevation-z8 container">
+<mat-toolbar class="mat-elevation-z8 header">
     <h1 class="mat-elevation-z8">Gestor Pessoal</h1>
 </mat-toolbar>
