--- a/src/app/views/components/templates/navbar/navbar.component.css
+++ b/src/app/views/components/templates/navbar/navbar.component.css
@@ -2,6 +2,8 @@
     height: 80%;
     width: 100%;
     background-color: #D2B48C;
+    padding-top: 1px;
+    padding-bottom: 1px;
 }
 
 .sidenav {
