--- a/src/app/views/components/templates/navbar/navbar.component.html
+++ b/src/app/views/components/templates/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="navbar" autosize>
     <mat-drawer #drawer class="sidenav" mode="side">
         <mat-nav-list class="nav-list">
-            <a mat-list-item routerLink="/">
+            <a mat-list-item routerLink="">
                 <i class="material-icons">home</i>Home
             </a>
             <a mat-list-item routerLink="contatos">
