Reformular o contato-read e formulario

--- a/src/app/views/components/templates/navbar/navbar.component.css
+++ b/src/app/views/components/templates/navbar/navbar.component.css
@@ -8,9 +8,15 @@
 
 .sidenav {
     background-color: #857d7d;
+    border-radius: 20px;
 }
 
 button {
     border: 0;
     background-color: #857d7d;
+    border-radius: 5px;
+}
+
+a {
+    border-radius: 5px;
 }
