--- a/src/app/views/components/templates/navbar/navbar.component.html
+++ b/src/app/views/components/templates/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="navbar" autosize>
+<mat-drawer-container class="navbar mat-elevation-z8" autosize>
     <mat-drawer #drawer class="sidenav" mode="side">
         <mat-nav-list class="nav-list">
             <a mat-list-item routerLink="">
