--- a/src/app/views/components/home/home.component.css
+++ b/src/app/views/components/home/home.component.css
@@ -3,4 +3,7 @@ img {
     position: absolute;
     height: 72%;
     padding-bottom: 0;
+    filter: alpha(opacity=50);
+    filter: progid: DXImageTransform.Microsoft.Alpha(opacity=0.5);
+    opacity: .50;
 }
